--- a/css-assessment/index.css
+++ b/css-assessment/index.css
@@ -10,15 +10,15 @@
     color: #000000;
 }
 
+.light-blue-background {
+    background-color: #F4F7FA;
+}
 
 * {
     color: #3C3C3C;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.light-blue-background {
-    background-color: #F4F7FA;
-}
 
 .nav-bar {
   display: flex;
@@ -94,4 +94,21 @@
     max-width: 30rem;
     padding: 0rem 0rem 0rem 4rem;
     display: inline-block;
+}
+
+
+.email-booking {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 3rem 1rem;
+}
+.email-booking > input {
+    width: 30rem;
+    padding: 1rem 1.2rem;
+    font-weight: 300;
+    font-size: 1rem;
+    border-color: transparent;
+    border: 0.1rem solid lightgray;
+    border-radius: 0.8rem;
 }
