email input bar completed

--- a/css-assessment/index.css
+++ b/css-assessment/index.css
@@ -112,3 +112,9 @@
     border: 0.1rem solid lightgray;
     border-radius: 0.8rem;
 }
+.email-booking-button {
+    padding: 1rem;
+    margin: 0 1rem;
+    border-radius: 0.8rem;
+    font-weight: 600;
+}
