footer intital work done

--- a/css-assessment/index.css
+++ b/css-assessment/index.css
@@ -162,3 +162,10 @@
     font-size: 1.1rem;
     max-width: 20rem;
 }
+
+.footer {
+    display: flex;
+    margin: 1rem 3rem 1rem 3rem;
+}
+.about-us{
+}
