--- a/css-assessment/index.css
+++ b/css-assessment/index.css
@@ -181,3 +181,24 @@
     padding: 0rem 6rem 2rem;
     width: 30rem;
 }
+
+.contact-us-heading {
+    font-weight: 700;
+    font-size: 1.6rem;
+    text-align: right;
+    padding: 2rem 6rem 1rem;
+}
+.contact-us-content {
+    font-weight: 300;
+    font-size: 1rem;
+    text-align: right;
+    padding: 0rem 6rem 0rem;
+    width: 30rem;
+}
+.contact-us-email {
+    font-weight: 600;
+    text-align: right;
+    font-size: 1rem;
+    padding: 0rem 6rem 2rem;
+    width: 30rem;
+}
